--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "12345678",
-    "database": "blog",
+    "password": "",
+    "database": "wuahsgnt_blog",
     "host": "localhost",
     "dialect": "mysql"
   },
