change local time

--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,12 @@
     "database": "blog",
     "host": "localhost",
     "dialect": "mysql",
+    "dialectOptions": {
+      "useUTC": false
+    },
+    "timezone": "+07:00", 
     "logging": false
+    
   },
   "test": {
     "username": "root",
